# cita-gossip

./: Cargo.toml  README.md  test.md  待修改问题.txt
data/: AliveList.toml
docs/: gossip模块化图 .xml  gossip模块化图.xml  gossip流程图.xml  mdns发现方式.xml  neighbor发现的StateMsg消息.xml  neighbor发现的heartbeat消息.xml  neighbor消息.xml  pushpull具体过程.xml  pushpull流程图.xml  接收方式.xml  死亡消息的主动方式.xml  死亡消息的被动方式.xml  配置文件发现方式.xml
src/: filter.rs  msg.rs  storage.rs  test_main.rs
src/CA/: build-CAroot.sh  build-ca.sh  get_key&cert.sh
src/comm_for_test/: Test instruction.md
test/comm_for_test/: Cargo.toml
test/comm_for_test/examples/: client.rs
