[package]
name = "comm"
license = "Apache-2.0/ISC/MIT"

[dependencies]
untrusted = "0.6.2"
base64 = "0.9"
log = { version = "0.4.0", optional = true }
ring = { version = "0.13.2", features = ["rsa_signing"] }
webpki = "0.18.1"
sct = "0.4"

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = []
quic = []

[dev-dependencies]
log = "0.4"
env_logger = "0.5"
mio = "0.6"
docopt = "1.0"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "0.15.0"
ct-logs = "0.4"
regex = "1.0"
vecio = "0.1"
